[tool.poetry]
name = "exemple-supply-chain"
version = "0.1.0"
description = ""
authors = ["Vincent Perrollaz <vincent.perrollaz@laposte.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.6.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
